--- a/src/pages/HomePageLoggedOut/HomePageLoggedOut.scss
+++ b/src/pages/HomePageLoggedOut/HomePageLoggedOut.scss
@@ -1,7 +1,14 @@
 .home-page-logged-out {
-    height: 100vh;
+    // 74px = header height
+    height: calc(100vh - 74px);
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
+
+    // Not display scrollbar for Edge/Firefox/Chrome/Safari/Opera
+    scrollbar-width: none;
+    &::-webskit-scroll {
+        display: none;
+    }
 
     > .home-page-logged-out__section:nth-child(2n) {
         flex-direction: row-reverse;
